2011-10-30 Roman
- UI.QTCfg: Write only changed values to LineEdit and TextEdit fields is set for allow easy write on periodic update.
- !!:UI.VCAEngine: Old UnDo mechanism for removed child widgets is removed and going to replaced to new.
- !!:UI.VCAEngine, UI.Vision, UI.WebVision: Graphic line width select is added to primitive "Diagram".
- !:UI.Vision: UnDo and ReDo is added for new widgets add and primitive "ElFigure" edit.


2011-10-29 Roman
- FIX:UI.QTCfg: Autoupdate check is added on page refrash command, after any page's items change.


2011-10-28 Roman
- FIX:DAQ: Status of controller objects grow is prevented on incorrect redundance configuration, from self to self.
- Archive.FSArch: Checking for value archive file write error is some expanded.
- !:UI.QTCfg: Rows of tables limit is set to half height of the table.
- FIX:UI.VCAEngine: Force widgets create is set on child inherit for prevent to removed widgets check on that stage.


2011-10-27 Roman
- !!!:UI.Vision: Main UnDo and ReDo changes support is added into visual widgets edit.
    Going to add UnDo and Redo for operations "add" and "remove" included widgets.
- !!:UI.VCAEngine, UI.Vision, UI.WebVision: Periodic check opened pages by request full widgets tree is added for
    check and remove removed in run widgets.


2011-10-25 Roman
- FIX:DAQ.Siemens: Multi-blocks fragments register is fixed, write blocks.


2011-10-24 Maxim
- FIX:UI.Vision: Connecting the shapes while orthogonal drawing is fixed for the primitive ElFigure.


2011-10-24 Roman
- FIX:UI.VCAEngine: Load document's session attribute's values from session table is fixed.
- FIX:DAQ.Siemens: Multi-blocks fragments register is fixed.
- !!!:UI.VCAEngine: Selected pages, only opened and processing, enable on progect's session start for start speed increase.
    Other pages will enable at need that is use.


2011-10-23 Roman
- !!:UI.VCAEngine: Attributes at lock counter and other bit methods of widget is reordered.